ajout d'un id sur les classes score

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <div id="playwindow">
         <div id="playarea">
             <div id="scoreContainer">
-                <div class="score">x2</div>
-                <div class="score">1000</div>
-                <div class="score">1000</div>
+                <div class="score" id="lives">x2</div>
+                <div class="score" id="score">1000</div>
+                <div class="score" id="highScore">1000</div>
             </div> 
         </div>
     </div>
