--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
                 <div class="score" id="score"></div>
                 <div class="score" id="highScore"></div>
                 <div class="score" id="divFPS">FPS: 0</div>
+            </div>
+            <div id="messageContainer">
+                <div class="message">Game Over</div>
+                <div class="message">Press Space</div>
             </div> 
         </div>
     </div>
