ajout des div étoiles

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
     <div id="playwindow">
         <div id="playarea">
+                <div class="star starSmall"></div>
+                <div class="star starMedium"></div>
+                <div class="star starBig"></div>
             <div id="scoreContainer">
                 <div class="score" id="lives"></div>
                 <div class="score" id="score"></div>
